tests/baselines/reference/chainedAssignment2.errors.txt
chainedAssignment2.ts(7,1): error TS2322: Type 'null' is not assignable to type 'string'.
chainedAssignment2.ts(7,5): error TS2322: Type 'null' is not assignable to type 'number'.
chainedAssignment2.ts(7,9): error TS2322: Type 'null' is not assignable to type 'boolean'.
chainedAssignment2.ts(7,13): error TS2322: Type 'null' is not assignable to type 'Date'.
chainedAssignment2.ts(7,17): error TS2322: Type 'null' is not assignable to type 'RegExp'.


==== chainedAssignment2.ts (5 errors) ====
    var a: string;
    var b: number;
    var c: boolean;
    var d: Date;
    var e: RegExp;
    
    a = b = c = d = e = null;
    ~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
        ~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
            ~
!!! error TS2322: Type 'null' is not assignable to type 'boolean'.
                ~
!!! error TS2322: Type 'null' is not assignable to type 'Date'.
                    ~
!!! error TS2322: Type 'null' is not assignable to type 'RegExp'.
    
    